--- a/pom.xml
+++ b/pom.xml
@@ -23,14 +23,14 @@
  	<repositories>
  		<repository>
 			<id>bukkit-repo</id>
-			<url>http://repo.bukkit.org/content/groups/public/</url>
+			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots</url>
 		</repository>
 	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>org.bukkit</groupId>
         	<artifactId>bukkit</artifactId>
-        	<version>1.6.4-R2.0</version>
+        	<version>1.9.4-R0.1-SNAPSHOT</version>
         	<type>jar</type>
         	<scope>provided</scope>
 		</dependency>
